patterndb and configuration updated

--- a/syslog-ng/conf.d/03filters.conf
+++ b/syslog-ng/conf.d/03filters.conf
@@ -50,6 +50,11 @@ filter fi_lmtp_type1 {
         message("INFO LMTP TYPE1");
 };
 
+filter fi_lmtp_type2 {
+        message("INFO LMTP TYPE2");
+};
+
+
 # CONTEXTO QMGR
 
 filter fi_qmgr_type1 {
@@ -76,7 +81,19 @@ filter fi_rspamd {
         message("INFO RSPAMD");
 };
 
+# CONTEXTO DOVECOT
 
+filter fi_dovecot_type1 {
+        message("INFO DOVECOT TYPE1");
+};
+
+filter fi_dovecot_type2 {
+        message("INFO DOVECOT TYPE2");
+};
+
+filter fi_dovecot_type3 {
+        message("INFO DOVECOT TYPE3");
+};
 
 
 ########
