--- a/syslog-ng/conf.d/04destinations.conf
+++ b/syslog-ng/conf.d/04destinations.conf
@@ -259,6 +259,7 @@ destination d_db_smtp_type1 {
                         pair("action", "${postfix.status}")
                         pair("relay_msg", "${postfix.relay.msg}")
                         pair("relay_qid", "${postfix.relay.qid}")
+                        pair("instance", "postfix${postfix.instance}")
                 )
         );
 };
@@ -281,6 +282,7 @@ destination d_db_smtp_type2 {
                         pair("action", "${postfix.status}")
                         pair("relay_msg", "${postfix.relay.msg}")
                         pair("relay_qid", "${postfix.relay.qid}")
+                        pair("instance", "postfix${postfix.instance}")
                 )
         );
 };
@@ -298,6 +300,7 @@ destination d_db_smtp_type3 {
                         pair("relay", "${postfix.relay.hostname}")
                         pair("relay_ip", "${postfix.relay.ip}")
                         pair("relay_msg", "${postfix.relay.msg}")
+                        pair("instance", "postfix${postfix.instance}")
                 )
         );
 };
@@ -340,6 +343,7 @@ destination d_db_smtpd_type2 {
                         pair("to", "${postfix.recipient2}")
                         pair("helo", "${postfix.helo}")
                         pair("action", "${action}")
+                        pair("instance", "postfix${postfix.instance}")
                 )
         );
 };
@@ -364,6 +368,7 @@ destination d_db_smtpd_type3 {
                         pair("to", "${postfix.recipient2}")
                         pair("helo", "${postfix.helo}")
                         pair("action", "${action}")
+                        pair("instance", "postfix${postfix.instance}")
                 )
         );
 };
@@ -423,4 +428,47 @@ destination d_db_rspamd {
                 )
         );
 };
+
+destination d_db_lmtp_type1 {
+        mongodb(
+                persist-name("email_lmtp1")
+                uri("mongodb://127.0.0.1:27017/syslog")
+                collection("emails_mx")
+                value-pairs(
+                        pair("node", "${HOST}")
+                        pair("datetime", datetime("${UNIXTIME}"))
+                        pair("postfix_qid", "${postfix.qid}")
+                        pair("to", "${postfix.to}")
+                        pair("orig_to", "${postfix.orig_to}")
+                        pair("relay_path", "${postfix.relay.path}")
+                        pair("delay", "${postfix.delay}")
+                        pair("dsn", "${postfix.dsn}")
+                        pair("status", "${postfix.status}")
+                        pair("lmtp_id", "${dovecot.id}")
+                        pair("dovecot_action", "${dovecot.action}")
+                )
+        );
+};
+
+
+destination d_db_lmtp_type2 {
+        mongodb(
+                persist-name("email_lmtp2")
+                uri("mongodb://127.0.0.1:27017/syslog")
+                collection("emails_mx")
+                value-pairs(
+                        pair("node", "${HOST}")
+                        pair("datetime", datetime("${UNIXTIME}"))
+                        pair("postfix_qid", "${postfix.qid}")
+                        pair("to", "${postfix.to}")
+                        pair("relay_path", "${postfix.relay.path}")
+                        pair("delay", "${postfix.delay}")
+                        pair("dsn", "${postfix.dsn}")
+                        pair("status", "${postfix.status}")
+                        pair("status_msg", "${postfix.statusmsg}")
+                )
+        );
+};
+
+
 
