--- a/syslog-ng/conf.d/05log.conf
+++ b/syslog-ng/conf.d/05log.conf
@@ -13,6 +13,16 @@
 #log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_context_senddata); destination(d_script_1); };
 
 
+# DEBUG ARQUIVO
+
+
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_dovecot_type1); destination(hosts_maillog_pattern); };
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_dovecot_type2); destination(hosts_maillog_pattern); };
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_dovecot_type3); destination(hosts_maillog_pattern); };
+
+
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_lmtp_type1); destination(hosts_maillog_pattern); };
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_lmtp_type2); destination(hosts_maillog_pattern); };
 
 log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_rspamd); destination(hosts_maillog_pattern); };
 log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_bounce); destination(hosts_maillog_pattern); };
@@ -37,8 +47,12 @@ log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_smtpd
 
 
 
+# INSERT MONGO
 
 
+
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_lmtp_type1); destination(d_db_lmtp_type1); };
+log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_lmtp_type2); destination(d_db_lmtp_type2); };
 
 
 log { source(s_host); filter(f_mail); parser(pattern_emails_mx); filter(fi_rspamd); destination(d_db_rspamd); };
